# vllm.rs

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.prod  ReadMe-CN.md  ReadMe.md  build.sh  build_docker.sh  myproject.toml  vllm_rs.pyi  xinfer.pyi
.github/scripts/: bundle-binary-libs.sh
.github/workflows/: release-sm121.yml  release.yml
docs/: add_model.md  check_model.md  claude_code.md  docker.md  embeddings.md  get_started.md  goose.md  guided_decoding.md  kilocode.md  mcp_tool_calling.md  multimodal.md  opencode.md  performance.md  prefix-cache.md  rust_crate.md  test_model.md  tool_parsing.md  xbot.md
example/: chat.py  completion.py  server.py  tokenize.py  tool_calling.py
example/opencode/: config.json
example/rust-demo/: Cargo.toml
example/rust-demo-tools/: Cargo.toml
example/rust-demo/src/: main.rs
npm/: package.json
npm/scripts/: clean-package.js  install.js  prepare-package.js
paged/: api-reference.html  developer-guide.html  getting-started.html  index.html  user-guide.html
paged/mobile/: index.html
pages/: index.html
python/: ReadMe.md  __init__.py
src/: api.rs  lib.rs  main.rs
src/core/: block_manager.rs  engine.rs  mod.rs  mtp.rs  prefix_cache.rs  runner.rs  scheduler.rs  sequence.rs
src/mcp/: manager.rs  mod.rs  server.rs
src/models/: deepseek3.rs  glm4.rs  glm4_moe_lite.rs  llama.rs  mod.rs  qwen3_5.rs  qwen3_5_moe.rs  qwen3_5_mtp.rs  qwen3_moe.rs
src/py/: mod.rs
src/runner/: mod.rs  runner.rs
src/server/: claude_server.rs  logger.rs  mod.rs  parser.rs  server.rs  (+1 more)
tests/: preprocess_parity.rs
(+41 files in other folders)
