[package]
name = "rust-demo"
version = "0.0.1"
edition = "2021"
default-run = "rust-demo"

[dependencies]
anyhow = "1.0.100"
xinfer = { path = "../.." }

[features]
cuda = ["xinfer/cuda"]
flashattn = ["xinfer/flashattn"]
flashinfer = ["xinfer/flashinfer"]
graph = ["xinfer/graph"]
nccl = ["xinfer/nccl"]
metal = ["xinfer/metal"]
